--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,12 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports: 
+    betapart,
+    DHARMa,
+    DHARMA,
+    dplyr,
+    ggplot2,
+    harry_potter,
+    hms,
+    patchwork
