:green_heart: Add fct and analyses on temporal turnover at timeslots level

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,8 @@ RoxygenNote: 7.2.3
 Imports: 
     betapart,
     DHARMa,
-    DHARMA,
     dplyr,
     ggplot2,
-    harry_potter,
+    harrypotter,
     hms,
     patchwork
